# CS-Problem-Solving-Audio-Project

./: CS-Problem-Solving-Audio-Project.toml  Convert.py  ConvertSciPy.py  LICENSE.txt  Project-Scientific Python Interactive Data Acoustic Modeling.docx  README.md  audioload.py  audioloadClean.py  audioloadController.py  audioloadModel.py  audioloadView.py  changelog.md  frequencies.py  main.py  requirements.txt  setup.cfg  time_waveform_display.py
Sample music/: Clap.m4a
