[metadata]
name = CS-Problem-Solving-Audio-Project
version = attr: CS-Problem-Solving-Audio-Project.1.0.0
author = Benjamin Voor, Tyler Mondalto, Michael Mille
author_email = bvoor3475@floridapoly.edu, mmille183@gmail.com, tylermondalto@gmail.com
description = The objective of this program is to load an audio file from someone's computer. It will display a variety of data, along with display plots of wavelength and RT60 values.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = CS-Problem-Solving-Audio-Project.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*